kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: base-akka-kubernetes
  name: base-akka-kubernetes
  namespace: base-akka-dev
spec:
  ports:
    - name: remoting
      port: 2552
      protocol: TCP
      targetPort: 2552
    - name: management
      port: 8558
      protocol: TCP
      targetPort: 8558
    - name: monitoring
      port: 8081
      protocol: TCP
      targetPort: 8081
    - name: main
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: base-akka-kubernetes
  sessionAffinity: None
  type: ClusterIP
